--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Isaac Rowell",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server/server.js"
+    "start": "node server/server.js",
+    "start-dev": "nodemon server/server.js"
   },
   "dependencies": {
     "express": "^4.16.4",
