--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-validator": "^5.3.1",
     "handlebars": "^4.0.12",
-    "hbs": "^4.0.1"
+    "hbs": "^4.0.1",
+    "mongod": "^2.0.0",
+    "mongoose": "^5.4.1"
   }
 }
