--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^5.3.1",
     "handlebars": "^4.0.12",
     "hbs": "^4.0.1",
+    "moment": "^2.23.0",
     "mongod": "^2.0.0",
     "mongoose": "^5.4.1"
   }
