--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node server/server.js",
-    "start-dev": "nodemon server/server.js"
+    "start-dev": "SECRET=secretsauce nodemon server/server.js"
   },
   "dependencies": {
     "d3": "^5.7.0",
