--- a/package.json
+++ b/package.json
@@ -7,10 +7,28 @@
   "license": "MIT",
   "scripts": {
     "start": "node server/server.js",
-    "start-dev": "SECRET=secretsauce nodemon server/server.js"
+    "build": "webpack --mode production",
+    "build-dev": "webpack --mode development",
+    "dev-server": "SECRET=secretsauce nodemon server/server.js",
+    "start-dev": "concurrently 'yarn run build-dev' 'yarn run dev-server' "
   },
   "dependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@vx/axis": "^0.0.183",
+    "@vx/curve": "^0.0.182",
+    "@vx/grid": "^0.0.183",
+    "@vx/group": "^0.0.183",
+    "@vx/mock-data": "^0.0.182",
+    "@vx/scale": "^0.0.182",
+    "@vx/shape": "^0.0.183",
+    "@vx/threshold": "^0.0.183",
+    "babel-loader": "^8.0.5",
     "d3": "^5.7.0",
+    "d3-time-format": "^2.1.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-validator": "^5.3.1",
@@ -18,6 +36,12 @@
     "hbs": "^4.0.1",
     "moment": "^2.23.0",
     "mongod": "^2.0.0",
-    "mongoose": "^5.4.1"
+    "mongoose": "^5.4.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0"
   }
 }
