--- a/package.json
+++ b/package.json
@@ -16,11 +16,6 @@
     "test-watch": "yarn test --watch"
   },
   "dependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
     "@vx/axis": "^0.0.183",
     "@vx/curve": "^0.0.182",
     "@vx/grid": "^0.0.183",
@@ -31,11 +26,9 @@
     "@vx/scale": "^0.0.182",
     "@vx/shape": "^0.0.183",
     "@vx/threshold": "^0.0.183",
-    "babel-core": "^7.0.0-0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.5",
     "d3": "^5.7.0",
     "d3-time-format": "^2.1.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-validator": "^5.3.1",
@@ -45,11 +38,19 @@
     "mongod": "^2.0.0",
     "mongoose": "^5.4.1",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "regenerator-runtime": "^0.13.1"
+    "react-dom": "^16.7.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.5",
     "jest": "^23.6.0",
+    "regenerator-runtime": "^0.13.1",
     "superagent": "^4.1.0",
     "supertest": "^3.3.0",
     "webpack": "^4.28.3",
