--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vx/scale": "^0.0.182",
     "@vx/shape": "^0.0.183",
     "@vx/threshold": "^0.0.183",
+    "bootstrap": "^4.3.1",
     "css-loader": "^2.1.0",
     "d3": "^5.7.0",
     "d3-time-format": "^2.1.3",
