--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "hls.js": "^0.12.2",
     "moment": "^2.23.0",
     "mongod": "^2.0.0",
     "mongoose": "^5.4.1",
