--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build",
     "build": "webpack --mode production",
-    "build-dev": "webpack-dev-server --mode=development --port 8081",
+    "build-dev": "webpack-dev-server --mode=development",
     "dev-server": "SECRET=secretsauce NODE_ENV=development nodemon server/server.js",
     "start-dev": "concurrently 'yarn run build-dev' 'yarn run dev-server' ",
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && jest",
@@ -34,9 +34,12 @@
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "hls.js": "^0.12.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "mongod": "^2.0.0",
     "mongoose": "^5.4.1",
+    "mongoose-unique-validator": "^2.0.3",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
