Implement login page with Authorization service

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vx/scale": "^0.0.182",
     "@vx/shape": "^0.0.183",
     "@vx/threshold": "^0.0.183",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "css-loader": "^2.1.0",
     "d3": "^5.7.0",
@@ -35,6 +36,7 @@
     "express-validator": "^5.3.1",
     "hls.js": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "mongod": "^2.0.0",
