--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build",
     "build": "webpack --mode production",
-    "build-dev": "webpack-dev-server --mode=development",
+    "build-dev": "webpack-dev-server --mode development",
     "dev-server": "SECRET=secretsauce NODE_ENV=development nodemon server/server.js",
     "start-dev": "concurrently 'yarn run build-dev' 'yarn run dev-server' ",
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && jest",
