--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "rtcpeerconnection": "^8.4.0",
     "sass-loader": "^7.1.0",
     "sdp": "^2.9.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "webpack-dev-server": "^3.1.14",
