--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "hls.js": "^0.12.2",
+    "jaysonic": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
@@ -51,8 +52,6 @@
     "rtcpeerconnection": "^8.4.0",
     "sass-loader": "^7.1.0",
     "sdp": "^2.9.0",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "webpack-dev-server": "^3.1.14",
